# ChangeLog for media-sound/mumble
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mumble/ChangeLog,v 1.46 2014/02/15 21:18:30 ago Exp $

  15 Feb 2014; Agostino Sarubbo <ago@gentoo.org> mumble-1.2.5.ebuild:
  Stable for amd64, wrt bug #500486

*mumble-1.2.5 (07 Feb 2014)

  07 Feb 2014; Timo Gurr <tgurr@gentoo.org> +mumble-1.2.5.ebuild:
  Version bump. Fixes security bug #500486 (CVE-2014-004{4,5}).

  17 Nov 2013; Timo Gurr <tgurr@gentoo.org> -mumble-1.2.3-r2.ebuild,
  -files/mumble-1.2.3-fix-cert-validation.patch,
  -files/mumble-1.2.3-set-file-permissions.patch:
  Remove old.

  27 Oct 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Voip herd is removed: http://article.gmane.org/gmane.linux.gentoo.devel/88434

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> mumble-1.2.4.ebuild:
  Stable for x86, wrt bug #476266

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> mumble-1.2.4.ebuild:
  Stable for amd64, wrt bug #476266

  07 Jun 2013; Timo Gurr <tgurr@gentoo.org> mumble-1.2.4.ebuild,
  +files/mumble-1.2.4-speech-dispatcher.patch:
  Fix building with speech-dispatcher >=0.8 wrt bug #472366.

*mumble-1.2.4 (04 Jun 2013)

  04 Jun 2013; Timo Gurr <tgurr@gentoo.org> -mumble-1.2.4_beta1.ebuild,
  +mumble-1.2.4.ebuild:
  Version bump, remove old. Fixes bug #396479,#445960,#472182

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> mumble-1.2.3-r2.ebuild,
  mumble-1.2.4_beta1.ebuild:
  Move Qt dependencies to the new category

*mumble-1.2.4_beta1 (16 Nov 2012)

  16 Nov 2012; Timo Gurr <tgurr@gentoo.org> +mumble-1.2.4_beta1.ebuild,
  -mumble-1.2.3-r1.ebuild:
  Version bump, remove old.

  05 May 2012; Michał Górny <mgorny@gentoo.org> mumble-1.2.3-r1.ebuild,
  mumble-1.2.3-r2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  18 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> mumble-1.2.3-r2.ebuild:
  x86 stable wrt bug #403939
