@@ -5,23 +5,23 @@ AUX mumble-1.2.4-speech-dispatcher.patch 1289 SHA256 d9443303de024e2efb4c0969121
 DIST mumble-1.2.4.tar.gz 3200084 SHA256 a1cf8383d99a02719b16c5440e3a5fb5375a8aa060f203bfa5d25bc69f919c9b SHA512 f5b353d060046fb20f5f2c0cdd097721354bc33304f95129d865fdbaa1cee2babfbd40e5a79adf3f46e8a219be65abfe3ccd02687a6140fdf7c03b2fc209765b WHIRLPOOL 6e207035e1357d4ebc42d0d812a12e4aa1f7ed423f33cabc17ad888766a2427d7137281923c2c2de09e2f71acac096fefa4e6b279241a2ddd498b0c2a0a38147
 DIST mumble-1.2.5.tar.gz 3200216 SHA256 915156946f7662c2488e4c40c95cb95c4ff00532789515da7df775a36d544faf SHA512 bc1761f1e2fc833124ff2ff9af994be59dc9ef96a1ed49316d5383d9b5d91c37ddce87bf6afefc99315824a2a52c615162b2e6050c78f90beca591b58229e7b1 WHIRLPOOL 1f4b226c4036d35a73f65beb4ea66ec0c4363c6122320e8d70a52e0f40b0e2e550282206dcf158bf5a4bb1109202c38a9451374c1bbce96bc559c576a18346c3
 EBUILD mumble-1.2.4.ebuild 3162 SHA256 e7d3eb4bd97c522bca6dc081b1ef88fed3d26316f0f912e579e6d4c81567eac0 SHA512 1cf8fda07a45bfe12fe15ba19ef2d6d75a6d1e5fcc80a30e226143c3b08f661f0b2019822041b08eadaa32721d34e9eb4b4e81b685bad014956e661df3122761 WHIRLPOOL eb4957fe00974ffcaf119df88bfdbeb20af685a44e89022d3122455c7dad94e53e9e9bead2987f67913d08c2ee08562e2b1c94254cd3c2311a57e7b343d5e9fa
-EBUILD mumble-1.2.5.ebuild 3163 SHA256 10d437dc94c32583959d4971da2e22bf7b1d0af85b2c9421b963f75888693396 SHA512 b9b1e51881af1a58dc2adc731d40f103cc8b9666d9c04196d68c76b593ae81f53e59abb9b2b6d89995f6773ae3c6c607b251ccffba97035545cdb115956f80a7 WHIRLPOOL 625cb5f9440f829381c96855c49145b87d9390fe854c8fc9e135a1c0addd74e4c9a1915fe0d349f9b96ed9ea8110635161c1c251137463fdc9f7929a1bfac38f
-MISC ChangeLog 8467 SHA256 9baa9de7d58d28cf909a4061b5306c6f6f445f0fabf03c22bc4c907f85dda3c2 SHA512 b2d91d1a40c39395a61692399136c762094dd7f153587b4b731e4e78f91960efe6428112e60ad780b463170deec9be403ace5c09fd3f08675c9c7ca600a1d59c WHIRLPOOL 595399a8c704904f5fccb224c6a6a09429919ad573406ace92e10620d89dc15d2aab8c82c6ec6f60a9f382185e571ce13e9ed8ef7c6eee0bc786500c7410e3a2
+EBUILD mumble-1.2.5.ebuild 3162 SHA256 cd491a70ef4a5e3c721e4c3460bfcf3dc4aaf94fda4f1c101005a04f8ffc15b8 SHA512 522a9bebab5e54dd7ac082215e1444fd3ba46e06350b34d680ab311d9129c44e0c2ff48745a86e82eb33c4288fc6b2d34adf6b7798cb01f6c4231d2f2591653b WHIRLPOOL 111d993c5fd39953bc63b57a778229ccd07e56c0b4993846317ada545012528c148a6b54008e3187680a04534380fcbbb5efd1b615559a57bad04261bfc9d2f7
+MISC ChangeLog 8572 SHA256 f8097212ae009620f261ac32eb282c91a27a857c3a1e0d3e83d77536485f26ac SHA512 a0a201a1aad6b6c5c1ca403eb41ae8abb83315b89a9b58ce508fa2c47c48da5fef17ae001e88c8e73605dd79ccc4e5a03270057ce07d70ddacfe4918d5bc0cbb WHIRLPOOL e49c875f7988709f9ca27c981a87761b07aa3f1a971c125112734e5fdbc8812abdfcb49bef73d6bb370500401f3e0eac4c2dbaf13af502ab712be56edd236ba4
 MISC metadata.xml 531 SHA256 bfef84aab6afb7767bb73391e7ee505b4f5194517aca3a95afac72e0850862d4 SHA512 2b21ff45a1d2ceb3c2463894fd8ce6463a44404f0abed4af1459b520697f66405de533b1e39df36b4ba1245d09cdf43e5a974e67eb2c47af9db0fb70e47e1202 WHIRLPOOL 973ec7ea40bbf87b26c7659ad087f524f48ef054b9f513af11621cde449bdf1a247abde41ba1c558bf3e74f490943d16485f0e58057077d072473334aeba6575
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS/9moAAoJELp701BxlEWfHF8P/2wQztEYtVEQ7jY4cEzbjSOW
-xvWjMCqi52dMzOdVQWzNXrX8RLHV4qngUV/SD2ccWrJhY8PYpJKX+K0XoMEYINYC
-pWEWefjyWBBt2KNLPEuz7hWN6pH3BtSy5bdvHDORHRdbVdGf9JtMQIZB8zyWTwEQ
-gZwz7r+v1mDDbO/bqQOetoC2pi0wzUbmt5BtrJVSMi7s6RExr16iBZEsoljSJFcM
-DPgkVdG6cbFMm7oeAWVUK356aMNp12D5bffOMpb5iZhGqalP4/8ABvBYY78ZvnHy
-p92ul3nYtSoDFbQXtpR9ODj4qf+j3zhhGlSao8YetiSzHTWFckQGKQ2chbVrmD7w
-shWyEcIKAt7CUG/MjsKHKuQmjhAJFRW0aSpmNYoFodCADXsKKaj9+YUdY5XlLlVW
-OMi35w57mU6/eO2rGZy2E0Xj+qFRrZnlgsBYjPRDqTIruohbxILXx+IORWclaKpQ
-dxyZ+fYjGmnCNi9pG3MXp+B193UlKhdPY4j5Ktqslz5+2w6aWdW8m7zCsh7evVHx
-U39yVlQUC7oZcMhyWyOq0ux9a8PZgIGJMa1K5FmT33CG+W1WApFbqBWn4Hp87E1u
-X8StYqysrtylr+3Oc7VJ/npc7eQcelOW7exGXZSZhkg0Y/Tdb56TcwBnQ6RHPgy5
-T9PSUx6IUfqeC8oiQoqg
-=qK0L
+iQIcBAEBCAAGBQJS/9vrAAoJELp701BxlEWfxCAP/i/58vg48jyR5C2SzxndBK/f
+gcuz56mf9CX4V/s8zThvs2LP6mX22hU+9438ufqs+fOUnfNS6V2YtX6bnWRFm+5a
+7jWR8+ms6NeZRryJhLujNLjjAf74MXfpuLHYoC5xgmooCzykVwQm64SZp03GHwFf
+7rKKxd5qUqkjSo1ejEr3+UZvIprhj6WleYHOSgBB/GODt78QkI1AAsrhyL5v+SqR
+hZ8v75Hea8mpERoieJHbgXnaEWVCjLrTnqLy/UdlsP6x6uwnic+HjpttHfoSTnF5
+Vk709WbdCPU+XTi1IOjhjDGgcoJuUjfIv11vb+DvazrHUe2lCVi2bIl/EJpoSqkq
+6Ke7iUuc5OzlGdTYf8MFkGOx4YrKyQrxsxH35S4Vzxp8Ki5OI5E+4CCNgg2hymiy
+uV73rShF9XtBqp1i9/nVeec928Bi10yS9RevCFRkZlkqzWYl2VYXHjbS3ld1OBzp
+3P+v5y3olfEO5XC9AJclSBVmjrLjaIaIoz6qwBTZQQQ2geykdrELUb+/ByEzE9W3
+2trAmiaAxgVFzGh45L5vZzfPwuBBJLeLs4lwvMx2HjjvSphyC38RI2O7JIr7xPIq
+DmQoDsN0ZPDmYHpAIy//DFtD8850bMPi9mIM04Gmje07B5j/uwpLQiu14TpXGgXN
+4qbbfETwg499oIjof6e4
+=N1nh
 -----END PGP SIGNATURE-----
