@@ -12,23 +12,23 @@ AUX murmurd-no-dbus.service 222 SHA256 6be9e5648ce854ec78ed016ef8a4d49ae36eca990
 DIST mumble-1.2.4.tar.gz 3200084 SHA256 a1cf8383d99a02719b16c5440e3a5fb5375a8aa060f203bfa5d25bc69f919c9b SHA512 f5b353d060046fb20f5f2c0cdd097721354bc33304f95129d865fdbaa1cee2babfbd40e5a79adf3f46e8a219be65abfe3ccd02687a6140fdf7c03b2fc209765b WHIRLPOOL 6e207035e1357d4ebc42d0d812a12e4aa1f7ed423f33cabc17ad888766a2427d7137281923c2c2de09e2f71acac096fefa4e6b279241a2ddd498b0c2a0a38147
 DIST mumble-1.2.5.tar.gz 3200216 SHA256 915156946f7662c2488e4c40c95cb95c4ff00532789515da7df775a36d544faf SHA512 bc1761f1e2fc833124ff2ff9af994be59dc9ef96a1ed49316d5383d9b5d91c37ddce87bf6afefc99315824a2a52c615162b2e6050c78f90beca591b58229e7b1 WHIRLPOOL 1f4b226c4036d35a73f65beb4ea66ec0c4363c6122320e8d70a52e0f40b0e2e550282206dcf158bf5a4bb1109202c38a9451374c1bbce96bc559c576a18346c3
 EBUILD murmur-1.2.4-r2.ebuild 3174 SHA256 9b6979538fe1be2c290e823a453626a6797cc348fab8617476f2bb0cad7f1352 SHA512 7c4d664d258709f1f10f5d956aa0add8a80cabdc823c05e20c237c6a579e5cf9de11ac18af3b7e04974370e65842fc39d0f66c16b5e32f5efefe66bb8fbf6516 WHIRLPOOL 1b2c587e66eac06827d00601475453564d40a0e126f6451240b0b0f1384b5a6aa7effd47500dd8a4603fc76ef07ee824743d6bfcbc5838704a1c9a4106b8ec06
-EBUILD murmur-1.2.5.ebuild 3170 SHA256 7d6404407a9ec67c649f325cedaedf686275c8d9e3463576d25b22a403b399a7 SHA512 5031ec06bf0d4205ac1a2ce6da85bf1088472765f5f9b880da22bf7e16a345de8e284dd585822964ac97069d9b61cb6ec54cb7cd17e74dedc6aa43f9e378a542 WHIRLPOOL 485094237f8e3f29acff5fd4d80d0d6800d31d11e58680ae06b626cb7df2a4cf00e39544871eff3fcfcd23ae02c876017d3f32756e29384c2cdcafce5aa50270
-MISC ChangeLog 9570 SHA256 e9b20d0942960b8d032cd00723b040c4b0acf6840c3a1b4e218a9c70af20510d SHA512 3281a2343c978c87e9006807d4db3cf01ccc5984554dacf581f685470413e2374ad1d625da0536f60e099249540b6133dbb6f15061b8e2298cd2815e10163bf0 WHIRLPOOL fac908e8a1f7db9bd989aef053b25dae89b5afd9d39d1315714e5dbf30eb3ab197906e7cb99865bddcb0c0a99a3d0be2f801dff4cb50a6202c0d64a3ff3f9793
+EBUILD murmur-1.2.5.ebuild 3169 SHA256 6649a7138239b503a9e4d76f5c59eab3015251b5c8d7e70584b42c6a71a25861 SHA512 aa7f2077910867dd6fd8df8e0d6beee0a95aa0243d3c4d80c0b6322f58bb58ab03bc5e77a6c6ec31c08e8a11b41b8c17c78542a46f80a65c46ca0049e35023c8 WHIRLPOOL 34e8e76fbe49209b3a142cd776a0a4e776da70cfc9f36e32cf724c9ec05210c01f079ff9b8eb0545d515497c3658c12fcd8a57facc16947c721fe30ebf37e787
+MISC ChangeLog 9675 SHA256 364181fa90c7664ef97a4b49a211096fd9677bfce6669ece95ab2a4a99af6577 SHA512 769b7a39a1d71665c04e4ba42f8b0338a78e3b159f7ba82b3dffdf3bc178e137bb5c197049fee0d04de9b83c08e524e0936f7c03e18972b412aa9715b3518e48 WHIRLPOOL 6ec58f6425b454bae95731d957986550ebd6b6798d28af82fdb0c36107eb6aed9aafc6f7bca0d0f0701e496b6a61b1909ff0fbb45a8dd9fd24abe9b1422bbc53
 MISC metadata.xml 462 SHA256 56997840cfbab3e4fa74612cffb34dedc9d09d77eb1d21400fcbe56ff99422ba SHA512 db80c7485b1e8e8931ebb17646ca89807c62e448fe182108b4d75801d1b096881e4dd1d99250d59ccdb227416157e00715253620a9f4c668d165a1367273d938 WHIRLPOOL 7e030326768ddcf60c615a585581ad7ad5cb3a235639d933fe02b8125ed4eaf9633930ba7be9aad43777fdf5253511efef58a89ae3a7dd269f67408e478d5b96
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS/9msAAoJELp701BxlEWfhUQQALm+ShSTFoj0JxCaSHmaPIHi
-qyejNkWMS7J5XoGgDAfK57TG443SJmbdxSkVc4eLGQoRkplSQd0cpX+aHDSo2scG
-aCbEUDX2xsUj47Ire2n38MK+r+2DV19TBLJsRTvrmgQThb90aRCoT45MSmsyUvvS
-27c3/aRISiOIna6NRvFOMn1j9yqKa8GJSybyrexGZmnVLw/JCN4Phb5HfROuvYVp
-OanXIaoZX48agVjYPmtcHtKXIIZ7EjhEGvyVNyaEHatKf8cf2c2zpwOEU8tDsPcP
-ZJOolDoqpJYaMi9I0Ym1wBZpldy4D4sgQE3Ahe1Md1FIpJ8wVy29UFxs4OZE7hCF
-8/1B+4BRGdUEwfofcbwqeMqDXnl0sBlWksJo4EKGk5p62qcRW5hI9cAb0qxE3ia/
-AHQDgPSU94D6M1vCfdfXIzg39BxBvczUwAmMLZfhJ2ClXvRYodEfWQh3Si3TsIVh
-zzwFPjEd8m6+V0V85fDKnfIPpp/8ksoIhinDotoKhHc+BYLcoHApqii67ynF4TjV
-G7Hp8PnkLCJnEWuVAzRP7IHo5qIhMOTEYHovgYrjpdSsR6GNXdHy7Y/3erwC4PfO
-lGWMs4fr66ljq+E1mgOQiQfRAhM5AULehwABt5g4Wy5olm0sW5gNz4qtJ/zV3ynW
-8+Vtn3nS7aoyMsaXLuoE
-=5iGt
+iQIcBAEBCAAGBQJS/9vuAAoJELp701BxlEWfFs0QALavlzmXJqMBJE/+MpV14sor
+a3XSp1GtQ1UGVE3gtcPy2NyjnW13n0PzmyQ6h6f11pfYPonVfuoNmA6njgYacswC
+4rVwS+bijOdrNObzJl5DkNjNeAbTuXrgOeg1Q33S3ARYPK4ab/9G9a6yP01T1vWq
+9cboka8vKVZhIaEo2GrLzkB1fo70ahI9n2Z6lU9spQr7ODdEQpOYl3qy8GKlA2Gl
+h0emUjv9TbQzgGFcsj9bmDfHvm0qJwuKtvGM36WPKwOUuFN2vtaC4kKZYpPvX+AI
+1c+vi8dj4iQbmG27XJ9ambKrrydcF8aSdWN8NOQxbxu2DSzBbxmJSZrN+n1Lije8
+stITtP5UuyZLIn0ln3srM9w8rUn6uK/mX1813jOieFMSY7A0+mwrESIwpfICcutG
+7Rywn2/1jB9zxBwCxYOwKxLlJJcwjvPw15/Y+ofWG6c+zLqGuyHUlAXSFC1BWfol
+yvLqsiU+0vviaOHSQb5cXmbsLMLWnE2VwHJdnRKAS/PFINTPCLgWZ9CLnScuhtAG
+LiKHUH7R52chk/2MWsuzjmKPeDYeM+JpwlIfElv5DzuSdN8iowH8JBl2ZGkoDB7X
+dOie62VcQIzc/gbFHXURi4CMX+SoG0TA3eUf5rW4SN2X8D8E6tUGUBDOJ5eaFk4v
+oTrAiMy7ZUCafSMUDz6z
+=l38M
 -----END PGP SIGNATURE-----
