@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/murmur
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/murmur/ChangeLog,v 1.53 2014/02/15 21:18:34 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/murmur/ChangeLog,v 1.54 2014/02/15 21:28:13 ago Exp $
+
+  15 Feb 2014; Agostino Sarubbo <ago@gentoo.org> murmur-1.2.5.ebuild:
+  Stable for x86, wrt bug #500486
 
   15 Feb 2014; Agostino Sarubbo <ago@gentoo.org> murmur-1.2.5.ebuild:
   Stable for amd64, wrt bug #500486
