@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mumble
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mumble/ChangeLog,v 1.46 2014/02/15 21:18:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mumble/ChangeLog,v 1.47 2014/02/15 21:28:10 ago Exp $
+
+  15 Feb 2014; Agostino Sarubbo <ago@gentoo.org> mumble-1.2.5.ebuild:
+  Stable for x86, wrt bug #500486
 
   15 Feb 2014; Agostino Sarubbo <ago@gentoo.org> mumble-1.2.5.ebuild:
   Stable for amd64, wrt bug #500486
